add background color

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,8 @@
   --background-status-finished: #eb0237;
   --background-status-prepared: #eb6402;
 
+  --background-refresh-icon-loading: #787878;
+
   --font-tactic-sans: 'Tactic Sans';
   --font-inter: 'Inter';
 
